--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -7,7 +7,7 @@ ritardo. Nel caso vi siano più servizi correlati fra di loro, la qualità viene
 associata a più operazioni.
 $\bullet$ La banda, cioè quanti bit/byte al secondo si riescono a trasmettere (dati
 trasmessi con successo)
-$\bullet$ L'adabilit` del sistema
+$\bullet$ L'affidabilità del sistema
 $\bullet$ Lo throughput, ovvero il numero di servizi che si riescono ad erogare
 nell'unit` di tempo.
 Tuttavia, questi non sono gli unici indicatori, e probabilmente non sono neanche
