--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -243,7 +243,7 @@ se il numero dei partecipanti è limitato. Per coordinarsi infatti i diversi cli
 chiedono e ricevono il clock mediante uno scambio di messaggi, e quindi si cerca
 di ottenere una mediazione, aggiustando di volta in volta il clock locale. Ma per
 far ciò serve un gestore continuo che faccia monitoring!
-Esiste anche un protocollo, Network Time Protocol, denito per il distribuito,
+Esiste anche un protocollo, Network Time Protocol, definito per il distribuito,
 in grado di basarsi su UTC per fornire un tempo comune a tutti i partecipanti.
 Si realizza una gerarchia di server, che coinvolge tutti i partecipanti: più si `
 u e
