--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -166,7 +166,7 @@ eventuali aggiustamenti del servizio per poter garantire la QoS). Altri settori
 fondamentali riguardano l'accounting e la sicurezza dei servizi.
 30
 \subsection{Gestione dei sistemi: OSI e SNMP}
-OSI ha denito un sistema per poter monitorare/gestire un insieme di risorse
+OSI ha definito un sistema per poter monitorare/gestire un insieme di risorse
 mediante l'uso di risorse astratte 8 : l'idea è quella di utilizzare delle descrizioni
 standard per poter definire risorse e azioni, necessarie per la gestione. Le informazioni che descrivono quindi il mondo
 sono codicare utilizzando il CMIB,
@@ -378,7 +378,7 @@ preoccuparsi di rinnovare periodicamente
 11 Vi è ICMP che prova ad avvertire l'utente che i pacchetti non son stati ricevuti, ma lavora
 sempre a livello di IP, quindi rischia di essere coinvolto nella congestione!
 35
-la richiesta del servizio concordato. Si ha che quindi il protocollo è denito in
+la richiesta del servizio concordato. Si ha che quindi il protocollo è definito in
 due passi:
 1. Il cliente invia un messaggio di Resv per valutare la disponibilità
 2. Un servitore che è disponibile risponde con un messaggio di tipo Path
