--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -171,6 +171,7 @@ Si possono ipotizzare sempre due modelli base:
 \end{itemize}
 In entrambi i modelli non si lavora in maniera sequenziale, ma parallela: le copie possono comunque svolgere anche 
 altri compiti, eseguire più operazioni contemporaneamente!
+
 Nel primo modello si deve pensare ad un sistema per tenere aggiornate le copie fredde: si utilizzano quindi dei
 checkpoint, per cui lo stato viene trasferito e replicato sulle copie fredde... ma quando farlo?
 \begin{itemize}
@@ -183,107 +184,84 @@ L'aggiornamento può essere eseguito periodicamente (\textit{time-driven}) oppur
 evento (\textit{event driven}). Quest'ultima politica risulta essere maggiormente dinamica e complessa da realizzare.
 Per esempio, un evento potrebbe essere scatenato dall'inizio del servizio della richiesta (estrazione dalla coda delle
 richieste), e terminare alla fine per poter fare il checkpoint.
+
 Le operazioni poi possono correlate o meno, e quindi anche il checkpoint potrebbe essere correlato! In questo caso,
 servono delle informazioni dall'utente su quando conviene fare il checkpoint (tipicamente, si attende che si giunga ad
 uno stato stabile e poi lo si esegue).
+
 Serve quindi la trasparenza? Il cliente deve sapere chi contattare se il master non è raggiungibile, quindi no! Deve
 avere idea che non sta interagendo con la copia principale, per poter sfruttare le risorse per potersi collegare alla
 risorsa secondaria mediante un opportuno sistema di nomi. Inoltre, a seconda della complessità del master, potrebbe
 essere conveniente farlo ritornare direttamente come master, invece che come slave. Si può comunque realizzare così una
 sorta di \textit{fault-transparency}, per cui dall'esterno la risorsa sembra reggere diversi fault e riesce a fornire
 un servizio con continuità.
-Infatti, sarebbe meglio che all'esterno non si sapesse il grado di replicazione
-di una risorsa, perché altrimenti sarebbe una decisione distribuita mediante il
-deployment: è in realtà il middleware ad accorgersi e a fare da supporto, cone
-tattando la nuova copia: per il client è tutto trasparente!
-Nel caso di copie attive, il client come le deve conoscere? Se le conosce in
-maniera esplicita, non abbiamo trasparenza e fornisce visibilità alla replicazione:
-viene utilizzato solo in appositi sistemi ad-hoc. In realtà, vi è sempre un sistema
-`
-implicito a garantire la comunicazione fra il client e le copie attive. E quindi necessario pensare ad un frontend che
-si preoccupi di smistare opportunatamente le
-richieste: potrebbe essere statico (in grado quindi di smistare qualunque richiesta) oppure dinamico (specializzato per
-una determinata richiesta). Ma nel caso
-di oggetto singolo, questo diventa un collo di bottiglia, perché se viene a mancare
-l'architettura non si regge più in piedi! Deve garantire un'alta affidabilità.
-Il secondo modello è realizzabile facendo in modo che ogni client diventi il
-gestore di quel tipo di richiesta, ma ciò necessita che le varie copie si mettano
-d'accordo: vi è un problema di sincronismo. Si può risolvere in diversi modi
-(sfruttando una politica ad anello, utilizzando un token univoco, in modo da
-simulare così un gestore unico fra tutte le copie attive), ma utilizzando delle
-\i{}
-approssimazioni per la sincronia, si possono ottenere dei protocolli più semplici
-da implementare (si possono presentare dei problemi dal punto di vista semantico, ovvero come devono essere ordinate le
-operazioni), risultando meno costose
-e più veloci. Infatti, in caso di richieste indipendenti fra di loro, la perfetta
-sincronia è soltanto un costo aggiuntivo! La sincronicit` deve quindi essere stue
-diata a seconda del tipo di operazioni che si devono svolgere (letture sincrone,
-scritture sequenziali). Per altre operazioni, si deve tener conto dell'architettura
-e del signicato dell'operazione: si potrebbero eseguire in maniera indipendente,
-e procedere quindi successivamente ad una riconciliazione fra le copie per avere
-`
-uno stato univoco coeso. E importante però nel caso di copie attive che l'ago
-23
-giornamento delle copie preceda la consegna del risultato al cliente.
-`
+
+Infatti, sarebbe meglio che all'esterno non si sapesse il grado di replicazione di una risorsa, perché altrimenti
+sarebbe una decisione distribuita mediante il deployment: è in realtà il middleware ad accorgersi e a fare da supporto,
+contattando la nuova copia: per il client è tutto trasparente!
+
+Nel caso di copie attive, il client come le deve conoscere? Se le conosce in maniera esplicita, non abbiamo trasparenza
+e fornisce visibilità alla replicazione: viene utilizzato solo in appositi sistemi ad-hoc. In realtà, vi è sempre un
+sistema implicito a garantire la comunicazione fra il client e le copie attive. E quindi necessario pensare ad un
+frontend che si preoccupi di smistare opportunatamente le richieste: potrebbe essere statico (in grado quindi di
+smistare qualunque richiesta) oppure dinamico (specializzato per una determinata richiesta). Ma nel caso di oggetto
+singolo, questo diventa un collo di bottiglia, perché se viene a mancare l'architettura non si regge più in piedi! 
+Deve \textit{garantire un'alta affidabilità}.
+
+Il secondo modello è realizzabile facendo in modo che ogni client diventi il gestore di quel tipo di richiesta, ma 
+ciò necessita che le varie copie si mettano d'accordo: vi è un problema di sincronismo. Si può risolvere in diversi
+modi (sfruttando una politica ad anello, utilizzando un token univoco, in modo da simulare così un gestore unico fra
+tutte le copie attive), ma utilizzando delle approssimazioni per la sincronia, si possono ottenere dei protocolli più
+semplici da implementare (si possono presentare dei problemi dal punto di vista semantico, ovvero come devono essere
+ordinate le operazioni), risultando meno costose e più veloci. Infatti, in caso di richieste indipendenti fra di loro,
+la perfetta sincronia è soltanto un costo aggiuntivo! La sincronicità deve quindi essere studiata a seconda del tipo di
+operazioni che si devono svolgere (letture sincrone, scritture sequenziali). Per altre operazioni, si deve tener conto
+dell'architettura e del signicato dell'operazione: si potrebbero eseguire in maniera indipendente, e procedere quindi
+successivamente ad una riconciliazione fra le copie per avere uno stato univoco coeso. E importante però nel caso di
+copie attive che l'aggiornamento delle copie preceda la consegna del risultato al cliente.
+
 E quindi necessario pensare ad un gestore delle copie attive, in grado di escludere correttamente le copie non
-funzionanti (altrimenti si avrebbero tempi
-di attesa altissimi per avere conferma degli aggiornamenti; se un'operazione si
-guasta, deve esserci comunque un modo per poter fornire una risposta all'esterno) e quindi di poter essere in grado di
-coordinare le diverse copie attive. Per
-esempio, invece che utilizzare un sistema per cui tutte le copie garantiscono la
-conferma dell'azione, si potrebbe utilizzare una forma di voting: solo la maggioranza delle copie in concordanza fra di
-loro proseguono l'esecuzione, mentre le
-altre dovranno essere sospese e si dovrà procedere con il recovery (identicazione
-e recupero dal gestore o da chi altro: dovrà essere deciso in fase progettuale).
-Questo protocollo sgravia la risposta verso l'esterno, che può essere fornita più
-`
-velocemente! E evidente la necessità di un gestore per il monitoraggio, controla
-lo delle copie. In generale, in un sistema reale, il numero di copie è limitato:
-studiando opportunatamente il protocollo si riduce l'overhead al minimo.
+funzionanti (altrimenti si avrebbero tempi di attesa altissimi per avere conferma degli aggiornamenti; se un'operazione
+si guasta, deve esserci comunque un modo per poter fornire una risposta all'esterno) e quindi di poter essere in grado
+di coordinare le diverse copie attive. Per esempio, invece che utilizzare un sistema per cui tutte le copie garantiscono
+la conferma dell'azione, si potrebbe utilizzare una forma di voting: solo la maggioranza delle copie in concordanza fra
+di loro proseguono l'esecuzione, mentre le altre dovranno essere sospese e si dovrà procedere con il recovery
+(identicazione e recupero dal gestore o da chi altro: dovrà essere deciso in fase progettuale).
+Questo protocollo sgravia la risposta verso l'esterno, che può essere fornita più velocemente! E evidente la necessità
+di un gestore per il monitoraggio, controllo delle copie. In generale, in un sistema reale, il numero di copie è
+limitato: studiando opportunatamente il protocollo si riduce l'overhead al minimo.
 \subsection{Modelli per la replicazione, copie attive}
-L'ipotesi è che vi è un insieme di copie che devono produrre un risultato per
-un insieme di clienti. Si deve quindi pensare a delle opportune fasi di coordinamento sia prima che dopo l'esecuzione,
-per poter organizzare le copie e
-fornire il risultato deciso. Si possono quindi pensare modelli in cui le copie lavorano s` in maniera indipendente, ma
-all'occorrenza sarebbero in grado di fare
-\i{}
-da supporto a copie non funzionanti, ottenendo così un bilanciamento del carico.
-\i{}
+L'ipotesi è che vi è un insieme di copie che devono produrre un risultato per un insieme di clienti. Si deve quindi
+pensare a delle opportune fasi di coordinamento sia prima che dopo l'esecuzione, per poter organizzare le copie e
+fornire il risultato deciso. Si possono quindi pensare modelli in cui le copie lavorano sì in maniera indipendente,
+ma all'occorrenza sarebbero in grado di fare da supporto a copie non funzionanti, ottenendo così un bilanciamento del
+carico.
+
 Nel caso delle copie attive, vi sono 5 passaggi che si devono fare in ordine:
-1. All'arrivo di una richiesta, come deve essere smistata? Vi sono due possibilità: o arriva ad un'unica copia che poi
-deve fornirla anche alle altre,
-oppure viene mandata dal client direttamente a tutti. Per avere maggiore
-trasparenza, è ovviamente preferibile il primo modello. La copia quindi
-può avere un comportamento dinamico o statico.
-2. Vi è poi la fase di coordinamento fra le copie: dipende nuovamente dale
-l'architettura che si vuole realizzare. Si potrebbe avere un unico master
-gestore, oppure tutte le copie possono eseguire o in maniera paritaria o
-sono pesate a seconda della loro importanza. Questa fase può servire per
-bilanciare correttamente il carico fra le varie copie attive.
-3. Quindi vi è la vera esecuzione. In generale tutte le copie devono eseguire,
-ma non devono farlo in contemporanea. Tutte hanno stato, e devono
-fornire un risultato. Per certi servizi vi potrebbe essere una copia dedicata
-che può fornire subito la risposta.
-4. Seconda fase di coordinamento: il master (oppure le copie con un sistema
-di voting) determina il risultato nale basandosi sulle risposte ottenute
-24
-da tutte le copie. Questa è anche la fase in cui si possono individuare i
-guasti. Questa fase può essere utile nel caso si fossero ricevute più richieste
-correlate fra di loro, e quindi si potrebbe evidenziare un ordine non corretto
-d'esecuzione. Ciò però non è sempre possibile, quindi bisogna pensare alla
-prima fase di coordinazione mediante l'uso di un'operazione atomica, così
-\i{}
-da evitare un eventuale undo. In base quindi all'ordine delle richieste, le
-varie copie sanno come eseguire.
-5. Presentazione del risultato al cliente, che deve essere univoco.
-Il protocollo è molto più complesso di quello a master/server, tuttavia per grae
-di di replicazione limitati, ovvero con poche copie e un protocollo denito in
-maniera efficiente si ha un tempo di risposta piccolo.
-Un'architettura basata su master/slave (copie passive) riduce di moltoi costi,
-visto che vi è un'unica macchina a lavorare: produce il risultato e si preoccupa
-di fare l'operazione di checkpoint su tutte le altre copie, e quindi lo fornisce al
-cliente. La gestione è maggiormente semplicata.
+\begin{enumerate}
+ \item All'arrivo di una richiesta, come deve essere smistata? Vi sono due possibilità: o arriva ad un'unica copia
+ che poi deve fornirla anche alle altre, oppure viene mandata dal client direttamente a tutti. Per avere maggiore
+ trasparenza, è ovviamente preferibile il primo modello. La copia quindi può avere un comportamento dinamico o statico.
+ \item Vi è poi la fase di coordinamento fra le copie: dipende nuovamente dall'architettura che si vuole realizzare. Si
+ potrebbe avere un unico master gestore, oppure tutte le copie possono eseguire o in maniera paritaria o sono pesate 
+ a seconda della loro importanza. Questa fase può servire per bilanciare correttamente il carico fra le varie copie
+ attive.
+ \item Quindi vi è la vera esecuzione. In generale tutte le copie devono eseguire, ma non devono farlo in contemporanea.
+ Tutte hanno stato, e devono fornire un risultato. Per certi servizi vi potrebbe essere una copia dedicata che può
+ fornire subito la risposta.
+ \item Seconda fase di coordinamento: il master (oppure le copie con un sistema di voting) determina il risultato
+ finale basandosi sulle risposte ottenute da tutte le copie. Questa è anche la fase in cui si possono individuare i
+ guasti. Questa fase può essere utile nel caso si fossero ricevute più richieste correlate fra di loro, e quindi si
+ potrebbe evidenziare un ordine non corretto d'esecuzione. Ciò però non è sempre possibile, quindi bisogna pensare alla
+ prima fase di coordinazione mediante l'uso di un'operazione atomica, così da evitare un eventuale undo. In base quindi
+ all'ordine delle richieste, le varie copie sanno come eseguire.
+ \item Presentazione del risultato al cliente, che deve essere univoco.
+ Il protocollo è molto più complesso di quello a master/server, tuttavia per gradi di replicazione limitati, ovvero
+ con poche copie e un protocollo definito in maniera efficiente si ha un tempo di risposta piccolo.
+ Un'architettura basata su master/slave (copie passive) riduce di molto i costi, visto che vi è un'unica macchina a
+ lavorare: produce il risultato e si preoccupa di fare l'operazione di checkpoint su tutte le altre copie, e quindi lo
+ fornisce al cliente. La gestione è maggiormente semplicata.
+\end{enumerate}
 \subsection{Politiche di aggiornamento}
 Esistono diverse possibilità per eettuare l'aggiornamento delle copie. Vi potrebbe
 essere una copia primaria che si preoccupa di aggiornare le altre, oppure tutte
