--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -226,7 +226,7 @@ facendo in modo quindi che si conoscano comunque, nonostante l'uso di un'interfa
 persistenti.37 . DCOM si preoccupa
 di aumentare la dinamicità, cercando anche di andare oltre al C/S, ma fornendo
 strumenti per trovare in maniera automatica la soluzione, fornendo supporto
-alla portabilità, cercando di dare una visione semplicata. Purtroppo, per reala
+alla portabilità, cercando di dare una visione semplificata. Purtroppo, per reala
 izzare ciò si è dovuto ripensare l'architettura, mantenendo però un sistema per
 o e
 integrare il sistema legacy precedente.
