--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -210,7 +210,7 @@ de facto
 9 Attenzione, OSI è solo comunicazione!! La banda dovrà poi essere stabilita dal singolo
 router, la tecnologia utilizzata deve essere indipendente da questa comunicazione!
 31
-ltrate. Anche RMON rappresenta una derivazione semplicata da OSI, quindi
+ltrate. Anche RMON rappresenta una derivazione semplificata da OSI, quindi
 incompatibile.
 OSI permette di definire sistemi molto più complessi, grazie all'uso di un MIB
 più organizzato. Si possono infatti realizzare gerarchie dinamiche fra manger e
