--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -260,7 +260,7 @@ Nel caso delle copie attive, vi sono 5 passaggi che si devono fare in ordine:
  con poche copie e un protocollo definito in maniera efficiente si ha un tempo di risposta piccolo.
  Un'architettura basata su master/slave (copie passive) riduce di molto i costi, visto che vi è un'unica macchina a
  lavorare: produce il risultato e si preoccupa di fare l'operazione di checkpoint su tutte le altre copie, e quindi lo
- fornisce al cliente. La gestione è maggiormente semplicata.
+ fornisce al cliente. La gestione è maggiormente semplificata.
 \end{enumerate}
 \subsection{Politiche di aggiornamento}
 Esistono diverse possibilità per eettuare l'aggiornamento delle copie. Vi potrebbe
