--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -125,13 +125,13 @@ delle due parti. In particolare, per poter garantire l'affidabilità si deve far
 modo che i gruppi siano dinamici : se una copia cade, in maniera trasparente
 si deve proseguire. Per tutti i fault l'infrastruttura dovrebbe essere in grado di
 reagire: è ovvio quindi che serve un sistema di monitoring dell'infrastruttura,
-per poter eettuare le possibili azioni correttive:
+per poter effettuare le possibili azioni correttive:
 $\bullet$ Ritrasmissione di eventuali messaggi persi
 $\bullet$ Aggiustamento del gruppo dinamico.
 Ovviamente, si deve cercare di minimizzare i costi che si vengono aggiungere,
 tenendo conto del principio di minima intrusione.
 L'idea è quindi quella di realizzare dei meccanismi molto semplici, in maniera
-da poter garantire un controllo16 per poter eettuare la ritrasmissione. Si deve
+da poter garantire un controllo16 per poter effettuare la ritrasmissione. Si deve
 quindi studiare come richiedere o meno la ritrasmissione: per esempio, se avessimo una conferma positiva per ogni frame
 (si usa così un meccanismo di hold\i{}
 back, trattenendo i messaggi nch` non arriva la conferma che il precedente `
@@ -499,7 +499,7 @@ non è sempre possibile salvarsi tutta la memoria sul disco, specialmente con
 un'alta replicazione. L'idea è quindi quella di realizzare un sistema in cui i
 processi si scambino dei messaggi, mediante dei canali fortemente orientati, per
 poter salvare in maniera opportuna delle foto del sistema. Si tratta quindi di
-eettuare dei tagli, in maniera tale da determinare gli stati signicativi e quelli
+effettuare dei tagli, in maniera tale da determinare gli stati signicativi e quelli
 no, per poter inglobare i primi per poter formare uno snapshot globale! Lo stato
 infatti è la composizione dei singoli stati di ogni processo.
 Come si decide quali tagli vanno bene e quali no? I tagli realizzano degli
