--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -102,7 +102,7 @@ per facilitare la realizzazione di operazioni ACID (Atomic, Consistent,
 Isolation, Durable), necessarie per avere QoS in sistemi distribuiti basati
 su DB.
 $\bullet$ DB mw : l'obiettivo di questi mw invece è quello di migliorare/fornire un
-supporto per eettuare ricerche su db distribuiti. Si ha quindi una logica
+supporto per effettuare ricerche su db distribuiti. Si ha quindi una logica
 vicina al data-mining. Si vuole quindi superare l'eterogeneità dei diversi
 DB, sfruttando sistemi standard come ODBC, per leggere sui DB.
 $\bullet$ MOM : l'obiettivo di questi mw è l'estrema indipendenza fra i vari attori ! I
