--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -72,7 +72,7 @@ situazioni con traco molto limitato. Ciò però non è vero per tutti i servizi
 (ad esempio, video streaming o qualunque altro usso di informazioni continuative): la QoS è fondamentale proprio per
 poter erogare il servizio, per cui i
 problemi della banda e della latenza son fondamentali. Per garantire la QoS, le
-entità devono eettuare una negoziazione per decidere certi parametri (il ritara
+entità devono effettuare una negoziazione per decidere certi parametri (il ritara
 do inziale per assorbire il jitter medio, il massimo ritardo accettabile per non
 dover scartare un pacchetto. . . ). Per esempio, una prima idea per ottimizzare
 la trasmissione è quella di introdurre delle risorse sul client, e di buerizzarla:
