--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -263,7 +263,7 @@ Nel caso delle copie attive, vi sono 5 passaggi che si devono fare in ordine:
  fornisce al cliente. La gestione è maggiormente semplificata.
 \end{enumerate}
 \subsection{Politiche di aggiornamento}
-Esistono diverse possibilità per eettuare l'aggiornamento delle copie. Vi potrebbe
+Esistono diverse possibilità per effettuare l'aggiornamento delle copie. Vi potrebbe
 essere una copia primaria che si preoccupa di aggiornare le altre, oppure tutte
 le copie possono assumere questo compito. Si deve poi decidere se privilegiare
 la correttezza (situazione eager o pessimista, si prevede di aggiornare tutte le
