--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -112,7 +112,7 @@ specica agli sviluppatori di realizzare il sistema di ritrasmissione.
 2. Fornire l'atomicit` della trasmissione: per atomicit` si intende l'ordine
 con cui i messaggi giungono al gruppo. Si dovrebbe fare in modo infatti
 che tutti i membri del gruppo li ricevano nello stesso ordine?Non è detto
-(solo letture si potrebbero fare in ordine diverso)! Pu` essere infatti che
+(solo letture si potrebbero fare in ordine diverso)! Può essere infatti che
 a seconda dell'ordine dei messaggi si debbano attuare politiche diverse.
 L'atomicit` è lo studio di questo problema.
 ae
